# SecondSense

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  secondsense-llama-jni.cpp
app/src/main/java/com/secondsense/access/: MyAccessibilityService.kt  NodeMatcher.kt  ScreenContext.kt  ScreenContextProvider.kt
app/src/main/java/com/secondsense/agent/: ActionSchema.kt  AgentJsonCodec.kt  AgentLoopController.kt  AgentModelClient.kt  AgentResponseValidator.kt  AgentRunner.kt  MockAgentModelClient.kt  PromptBuilder.kt
app/src/main/java/com/secondsense/automation/: ActionExecutor.kt
app/src/main/java/com/secondsense/debug/: AgentLogStore.kt
app/src/main/java/com/secondsense/llm/: JniLlamaRuntime.kt  LlamaModelClient.kt  LlamaRuntime.kt  LocalModelController.kt  LocalModelProvider.kt  LocalModelVariant.kt  ModelDownloadManager.kt  ModelDownloadState.kt  ModelSelectionPolicy.kt  ModelSessionManager.kt  ModelStorage.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml  backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/secondsense/agent/: AgentJsonCodecTest.kt  AgentResponseValidatorTest.kt  AgentRunnerAndPromptBuilderTest.kt
docs/: setup-llama-android.md  setup.md
docs/architecture/: README.md  accessibility-context.md  agent-loop.md  data-contracts.md  offline-model-lifecycle.md
gradle/: libs.versions.toml
(+4 files in other folders)
